set(LUA_USER_H ${CMAKE_CURRENT_LIST_DIR}/lua.user.h CACHE FILEPATH "")
cmake_minimum_required(VERSION 2.8.12...4.0)
project(lua C)
include(${CMAKE_CURRENT_LIST_DIR}/lua.cmake)
option(LUA_ISOCLINE "Enable/Disable isocline" 1)
if(EXISTS ${CMAKE_CURRENT_LIST_DIR}/cmake/FindReadline.cmake)
  if(CMAKE_STATIC_LIBRARY_SUFFIX STREQUAL .lib)
    option(LUA_READLINE "Enable/Disable readline" 0)
  else()
    option(LUA_READLINE "Enable/Disable readline" 1)
  endif()
  if(NOT LUA_ISOCLINE AND LUA_READLINE)
    include(cmake/FindReadline.cmake)
  endif()
endif()
if(LUA_ISOCLINE)
  set_property(TARGET lua APPEND PROPERTY SOURCES ${CMAKE_CURRENT_LIST_DIR}/isocline.c)
  target_compile_definitions(lua PRIVATE LUA_ISOCLINE)
elseif(LUA_READLINE AND TARGET Readline::readline)
  set_property(TARGET lua APPEND PROPERTY SOURCES ${CMAKE_CURRENT_LIST_DIR}/readline.c)
  target_compile_definitions(lua PRIVATE LUA_READLINE)
  target_link_libraries(lua PRIVATE Readline::readline)
endif()
