cmake_minimum_required(VERSION 2.8.12...4.0)
project(lua C)
include(${CMAKE_CURRENT_LIST_DIR}/lua.cmake)
option(LUA_ISOCLINE "Enable/Disable isocline" 1)
add_subdirectory(${LUA_SOURCE_DIR} ${LUA_BINARY_DIR})
if(EXISTS ${CMAKE_CURRENT_LIST_DIR}/cmake/FindReadline.cmake)
  if(CMAKE_STATIC_LIBRARY_SUFFIX STREQUAL .lib)
    option(LUA_READLINE "Enable/Disable readline" 0)
  else()
    option(LUA_READLINE "Enable/Disable readline" 1)
  endif()
  if(NOT LUA_ISOCLINE AND LUA_READLINE)
    include(cmake/FindReadline.cmake)
  endif()
endif()
if(LUA_ISOCLINE)
  set(LUA_READLINE_C ${CMAKE_CURRENT_LIST_DIR}/isocline.c)
  file(RELATIVE_PATH LUA_READLINE_C ${LUA_SOURCE_DIR}/src "${LUA_READLINE_C}")
  target_compile_definitions(lua PRIVATE LUA_READLINE_C="${LUA_READLINE_C}")
elseif(LUA_READLINE AND TARGET Readline::readline)
  set(LUA_READLINE_C ${CMAKE_CURRENT_LIST_DIR}/readline.c)
  file(RELATIVE_PATH LUA_READLINE_C ${LUA_SOURCE_DIR}/src "${LUA_READLINE_C}")
  target_compile_definitions(lua PRIVATE LUA_READLINE_C="${LUA_READLINE_C}")
  target_link_libraries(lua PRIVATE Readline::readline)
endif()
